<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "@drawable/backgroundminecode"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    tools:context=".TikTacToeScreen2"
    android:id="@+id/tikTacToeScreen2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:fontFamily="@font/minecraftiafont"
            android:padding="20dp"
            android:text="@string/tik_tac_toe"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/homebutton"
                android:layout_width="40dp"
                android:layout_height="54dp"
                android:contentDescription="homebutton"
                android:scaleType="centerCrop"
                android:src="@drawable/homebutton"
                />


            <TextView
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/minecraftiafont"
                android:padding="10dp"
                android:text="@string/current_turn"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/TurnImage"
                android:layout_width="130dp"
                android:layout_height="54dp"
                android:contentDescription="@string/imageofturn"
                android:src="@drawable/zombiechicken" />


        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="332dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="130dp">

                <ImageButton
                    android:id="@+id/buttonA"
                    android:layout_width="130dp"
                    android:layout_height="110dp"
                    android:backgroundTint="#00404040"
                    android:contentDescription="@string/number1spot"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chest"
                    android:onClick="ButtonA" />

                <ImageButton
                    android:id="@+id/buttonB"
                    android:layout_width="130dp"
                    android:layout_height="110dp"
                    android:contentDescription="@string/spot2"
                    android:paddingHorizontal="15dp"
                    android:backgroundTint="#00404040"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chest"
                    android:onClick="B"
                    />

                <ImageButton
                    android:id="@+id/buttonC"
                    android:layout_width="116dp"
                    android:layout_height="110dp"
                    android:backgroundTint="#00404040"
                    android:contentDescription="@string/spot3"
                    android:paddingHorizontal="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chest"
                    android:onClick ="C"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/buttonD"
                    android:onClick="D"
                    android:layout_width="116dp"
                    android:layout_height="110dp"
                    android:backgroundTint="#00404040"
                    android:contentDescription="@string/spot4"
                    android:paddingHorizontal="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chest" />

                <ImageButton
                    android:id="@+id/buttonE"
                    android:onClick="E"
                    android:layout_width="116dp"
                    android:layout_height="110dp"
                    android:backgroundTint="#00404040"
                    android:contentDescription="@string/spot4"
                    android:paddingHorizontal="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chest" />

                <ImageButton
                    android:id="@+id/buttonF"
                    android:onClick="F"
                    android:layout_width="116dp"
                    android:layout_height="110dp"
                    android:backgroundTint="#00404040"
                    android:contentDescription="@string/imageofturn"
                    android:paddingHorizontal="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chest" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="105dp">

                <ImageButton
                    android:id="@+id/buttonG"
                    android:onClick="G"
                    android:layout_width="136dp"
                    android:layout_height="110dp"
                    android:paddingHorizontal="15dp"
                    android:backgroundTint="#00404040"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chest"
                    android:contentDescription= "@string/chest1"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/buttonH"
                    android:onClick="H"
                    android:layout_width="136dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="#00404040"
                    android:contentDescription="@string/spot3"
                    android:paddingHorizontal="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chest"
                    tools:ignore="ImageContrastCheck" />

                <ImageButton
                    android:id="@+id/buttonI"
                    android:onClick="I"
                    android:layout_width="136dp"
                    android:layout_height="110dp"
                    android:backgroundTint="#00404040"
                    android:contentDescription="@string/spot3"
                    android:paddingHorizontal="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chest" />
            </TableRow>

        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/Reset"
                android:onClick="ResetButton"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/Instructions" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button7"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/Settings"
                tools:ignore="HardcodedText" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/zombie1"
                android:onClick="zombie1"
                android:layout_width="90dp"
                android:layout_height="84dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/zombiea"
                android:scaleType="fitCenter"
                android:backgroundTint="#00404040"
                android:contentDescription="@string/small_zombie" />

            <ImageButton
                android:id="@+id/zombie2"
                android:onClick="zombie2"
                android:layout_width="90dp"
                android:layout_height="84dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/zombie2"
                android:scaleType="fitCenter"
                android:backgroundTint="#00404040"
                android:contentDescription="@string/medium_zombie" />

            <ImageButton
                android:id="@+id/zombie3"
                android:onClick="zombie3"
                android:layout_width="90dp"
                android:layout_height="84dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/zombie3"
                android:scaleType="fitCenter"
                android:backgroundTint="#00404040"
                android:contentDescription= "@string/largest_zombie" />

            <Space
                android:layout_width="27dp"
                android:layout_height="20dp" />

            <ImageButton
                android:id="@+id/skeleton1"
                android:onClick="skeleton1"
                android:layout_width="90dp"
                android:layout_height="84dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/skeletonb1"
                android:scaleType="fitCenter"
                android:backgroundTint="#00404040"
                android:contentDescription="@string/skeleton1" />

            <ImageButton
                android:id="@+id/skeleton2"
                android:onClick="skeleton2"
                android:layout_width="90dp"
                android:layout_height="84dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/skeletonb2"
                android:scaleType="fitCenter"
                android:backgroundTint="#00404040"
                android:contentDescription= "@string/skeleton_medium" />

            <ImageButton
                android:id="@+id/skeleton3"
                android:onClick="skeleton3"
                android:layout_width="90dp"
                android:layout_height="84dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/skeletonb3"
                android:scaleType="fitCenter"
                android:backgroundTint="#00404040"
                android:contentDescription= "@string/skeleton_large" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/zombie1text"
                android:layout_width="59dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:backgroundTintMode="add"
                android:text="@string/_2"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"

                />

            <TextView
                android:id="@+id/zombie2text"
                android:layout_width="57dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:backgroundTintMode="add"
                android:text="2"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/zombie3text"
                android:layout_width="50dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:backgroundTintMode="add"
                android:text="2"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Space
                android:layout_width="28dp"
                android:layout_height="31dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/zombie4text"
                android:layout_width="56dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:backgroundTintMode="add"
                android:text="2"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/zombie5text"
                android:layout_width="56dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:backgroundTintMode="add"
                android:text="2"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/zombie6text"
                android:layout_width="53dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:backgroundTintMode="add"
                android:text="2"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>



    </LinearLayout>


</FrameLayout>